# data-dance

./: Cargo.toml  build.rs  mise.toml  restore_1755109529010.json  restore_1755109617710.json  restore_1755116548861.json  restore_1755119050258.json  restore_1755119050297.json  restore_1755119051300.json  restore_1755127089207.json  restore_1755127089292.json  restore_1755127090297.json  restore_1755127210368.json  restore_1755127210442.json  restore_1755127211448.json
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/backup/: page.tsx
frontend/src/lib/: config.ts  model.ts  types.ts
frontend/src/lib/api/: index.ts  spec.ts
frontend/src/lib/components/backups/: CurrentBackupCard.tsx  CurrentBackupContent.tsx  HistoryBackupContent.tsx  HistoryBackupSection.tsx
frontend/src/lib/format/: bytes.ts  dates.ts
frontend/src/lib/queries/: backup.ts  history.ts  jobs.ts  spec.ts
resources/testing/: config.toml
src/: context.rs  lib.rs  main.rs
src/config/: load.rs  mod.rs
src/jobs/: executor.rs  mod.rs  variants.rs
src/jobs/full_backup/: mod.rs
src/jobs/incremental_backup/: implementation.rs  mod.rs  run.rs  state.rs  tests.rs
src/jobs/restore/: definition.rs  mod.rs  run.rs  state.rs  tests.rs
src/objects/: backup_history.rs  compression.rs  encryption.rs  job_history.rs  mod.rs  restore_metadata.rs  sensitive.rs
src/objects/job_params/: mod.rs  restore.rs
src/objects/job_result/: incremental_backup.rs  mod.rs  restore.rs
src/objects/job_state/: incremental_backup.rs  mod.rs  restore.rs
src/scripts/: compare_compression.rs  create_sample_config.rs  mod.rs
src/services/: compression.rs  encryption.rs  mod.rs  tracking.rs
src/services/channels/: writer.rs
src/services/data_dest/: fake.rs  mod.rs
src/services/data_dest/bare_fs/: mod.rs
src/services/data_dest/ssh/: mod.rs
src/services/data_source/: fake.rs  mod.rs
src/services/data_source/btrfs/: mod.rs
src/services/data_tunnel/: decoding.rs  encoding.rs  mapped.rs  mod.rs  pass_through.rs  tracker.rs
src/services/processes/: awaited_child.rs  awaited_stdin.rs  awaited_stdout.rs  mod.rs
src/web/: mod.rs
src/web/app/: mod.rs
src/web/app/overview/: mod.rs
src/web/app/overview/current/backup/: mod.rs  (+2 more)
src/web/app/server_fns/: job_history.rs  job_status.rs  mod.rs  start_backup.rs
src/web/routes/: fileserv.rs  mod.rs
src/web/routes/api/: mod.rs
src/web/routes/api/jobs/: history.rs  incremental_backup.rs  mod.rs  restoration.rs  status.rs
src/web/routes/ui/: mod.rs
(+2 files in other folders)
