[package]
name = "data-dance"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "3.1.12", features = ["embed", "csrf"] }
poem-openapi = { version = "5.1.16", features=["swagger-ui", "chrono"]}
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
rust-embed = "8.5.0"
wasm-bindgen = "=0.2.93"

chrono = { version = "0.4", features = ["serde"] }
toml = {version = "0.8.19", features = ["parse"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

thiserror = "1"

zstd = { version = "0.13.2" }

cryptostream = { version = "0.3.2"}
openssl = { version = "0.10.66" }
rand = { version = "0.9.2" }
blake2 = "0.10.6"
rand_hc = "0.4.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
